--- a/CSS/pagina3.css
+++ b/CSS/pagina3.css
@@ -1,75 +1,163 @@
-#tab1 {
-    background-color: gray;
-    height: 150px;
+* {
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.5;
+}
+
+header {
+    margin: 0 20px;
+}
+
+#topo {
+    background-color: #666;
     width: 100%;
-
-}
-
-#tab2 {
-
-    background-color: rgb(56, 50, 50);
-    color: white;
-    width: 100%;
-    text-align: center;
-    padding: 10px 15px;
-
-}
-
-#tab2 .link {
-    width: 170px;
-
-}
-
-#tab3 {
-
-    background-color: white;
-    height: 20px;
-    width: 100%;
-
-}
-
-
-
-#tab4 {
-    background-color: rgb(56, 50, 50);
     height: 100px;
-    width: 65%;
-    font-size: 50px;
-    color: white;
-
 }
 
-#tab5 {
-    background-color: gray;
-    height: 220px;
-    width: 65%;
-    color: white;
-    text-align: justify;
-}
-
-.botao {
-    float: right;
-}
-
-#tab6 {
-
-    background-color: white;
-    height: 20px;
+#menu {
     width: 100%;
+    height: 50px;
+    background-color: #444;
+    text-align: center;
+}
 
+#menu td,
+a.link {
+    color: white;
+    text-decoration: none;
+}
+
+td.colDestaque {
+    width: 66%;
 }
 
 
-#tab7 {
-    background-color: rgb(56, 50, 50);
-    height: 50px;
-    width: 30%;
-    font-size: 15px;
+#tabDestaques,
+#tabProgramacao,
+#tabWebdesign,
+.colMaisLidos {
+    background-color: #666;
     color: white;
 }
 
-#tab8 {
-    background-color: gray;
-    width: 30%;
-    
+tr.linTituloTab {
+    background-color: #444;
+    color: white;
+}
+
+tr.linMontandoLayout #quadrado {
+    width: 250px;
+    height: 250px;
+    margin: 15px 20px 20px 20px;
+    background-color: white;
+}
+
+tr.linMontandoLayout h2,
+tr.linMontandoLayout p {
+    margin-top: 10px;
+    padding-right: 20px;
+}
+
+tr.linTituloTab h1,
+tr.linTituloTab h2 {
+    margin: 5px 0;
+    padding-left: 20px;
+    text-transform: uppercase;
+}
+
+tr.artDestaque h3,
+tr.artDestaque p {
+    padding: 0 20px;
+}
+
+button {
+    position: relative;
+    float: right;
+    right: 20px;
+    font-weight: bold;
+    padding: 0 2px;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+}
+
+.maisArtigos {
+    background-color: #444;
+    padding: 5px 0;
+    margin: 0 20px;
+    text-align: center;
+}
+
+#tabProgramacao ul>li,
+#tabWebdesign ul>li {
+    color: black;
+}
+
+#tabProgramacao ul>li span,
+#tabWebdesign ul>li span {
+    color: white;
+}
+
+.colMaisLidos {
+    vertical-align: top;
+}
+
+#tabMaisLidos h2 {
+    background-color: #444;
+    margin: 0;
+    padding: 10px 20px;
+    text-transform: uppercase;
+}
+
+#tabMaisLidos ul {
+    margin: 0;
+    padding: 30px;
+    background-color: white;
+    color: black;
+}
+
+#tabMaisLidos ul>li span {
+    color: #666;
+}
+
+#tabMaisLidos input {
+    width: 100%;
+    padding: 15px 0;
+    border: 0;
+    font-size: 18px;
+}
+
+#tabMaisLidos input::placeholder {
+    font-size: 18px;
+    font-style: italic;
+    padding: 5px;
+}
+
+#tabMaisLidos #quadrados {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+#tabMaisLidos .quad {
+    display: inline-block;
+    width: 185px;
+    height: 185px;
+    background-color: white;
+}
+#tabMaisLidos .quadradinho1{
+    margin-bottom: 20px;
+    margin-right: 20px;
+}
+#tabMaisLidos .quadradinho2{
+    margin-bottom: 20px;
+}
+#tabMaisLidos .quadradinho3{
+    margin-right: 20px;
+}
+
+footer {
+    padding: 20px;
+    margin: 0 20px;
+    background-color: #666;
+    color: white;
 }
